--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
             text-transform: uppercase;
             position: relative;
             overflow-x: hidden;
+            animation: 2s ease-out 0s 1 appear;
         }
 
-        @keyframes slideInFromLeft {
+        @keyframes appear {
             0% {
                 opacity: 0;
             }
@@ -62,7 +63,7 @@
         }
 
         .content {
-            animation: 2s ease-out 0s 1 slideInFromLeft;
+            animation: 2s ease-out 0s 1 appear;
             display: block;
             text-align: center;
             max-width: 400px;
