--- a/index.html
+++ b/index.html
@@ -87,10 +87,13 @@
     The only <b class="red">digital</b> agency you ever need!
     <br>
     <br>
-    Get <b class="red">-10%</b> discount.
+    Get <b class="red">-10%</b> discount,
     <br>
     <br>
-    Your promo code: 4235
+    By promo code: it was a <b class="red">joke.</b>
+    <br>
+    <br>
+    Just...
 </main>
 <footer>
     <button id="get-discount" onclick="window.open('tel:+358405581267')">Call us, <b class='red'>now!</b></button>
